# ml_poc

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  __init__.py  demo.py  main.py  pd_service.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: ALGORITHM.md  API.md  IRIS_METHOD.md  README.md
pd_engine/: __init__.py  calibration.py  camera_calibration.py  core.py  corrections.py  forehead_detection.py  iris_pd_calculator.py  iris_pd_engine.py  measurement.py  photogrammetry.py  sam3_segmentation.py  temporal_filter.py  utils.py
