[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.26.0",
    "ultralytics>=8.3.241",
    "scikit-image>=0.26.0",
    "inference>=0.26.1",
    "inference-cli>=0.26.1",
    "image>=1.5.33",
    "pillow>=10.4.0",
    "roboflow>=1.2.11",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "inference-sdk>=0.26.1",
    "pycocotools>=2.0.11",
]
